[gd_scene load_steps=5 format=2]

[ext_resource path="res://music/music.gd" type="Script" id=1]
[ext_resource path="res://music/Hometown_Theme_Intro.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/Hometown_Theme_Loop.ogg" type="AudioStream" id=3]
[ext_resource path="res://music/Menu_Theme_Loop.ogg" type="AudioStream" id=6]

[node name="Music" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Players" type="Node" parent="."]

[node name="MainIntro" type="AudioStreamPlayer" parent="Players"]
stream = ExtResource( 2 )
volume_db = -9.5
bus = "Music"

[node name="MainLoop" type="AudioStreamPlayer" parent="Players"]
stream = ExtResource( 3 )
volume_db = -9.5
bus = "Music"

[node name="MenuLoop" type="AudioStreamPlayer" parent="Players"]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "Music"
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="finished" from="Players/MainIntro" to="." method="_on_MainIntro_finished"]
